@@ -1450,16 +1450,15 @@ estate_burghers_spice_trade = {
 	can_select = {
 		is_at_war = no
 		capital_scope = {
-			continent = europe
+			OR = {
+				continent = africa
+				continent = asia
+			}
 		}
 		NOT = { spices = 3 }
 	}
 	selection_weight = {
 		factor = 2.5
-		modifier = {
-			factor = 1.5
-			num_of_colonists = 1
-		}
 	}
 	provinces_to_highlight = {
 		trade_goods = spices
