@@ -3,6 +3,12 @@ establish_gaituguiliu_decision = {
 	emperor = {
 		meritocracy = 0.5
 	}
+	on_effect = {
+		set_country_flag = introduced_pravda_flag
+	}
+	off_effect = {
+		clr_country_flag = introduced_pravda_flag
+	}
 }
 
 seaban_decision = {
@@ -11,6 +17,12 @@ seaban_decision = {
 		merchants = 1
 		trade_efficiency = 0.05
 	}
+	on_effect = {
+		set_country_flag = reformed_varangian_trade_flag
+	}
+	off_effect = {
+		clr_country_flag = reformed_varangian_trade_flag
+	}
 	required_reform = establish_gaituguiliu_decision
 }
 
@@ -18,6 +30,12 @@ reform_land_tax_decision = {
 	empire = celestial_empire
 	emperor = {
 		global_autonomy = -0.05
+	}
+	on_effect = {
+		set_country_flag = enserfed_smerds_flag
+	}
+	off_effect = {
+		clr_country_flag = enserfed_smerds_flag
 	}
 	required_reform = seaban_decision
 }
@@ -31,16 +49,22 @@ military_governors_decision = {
 		set_country_flag = disable_rota_flag
 		custom_tooltip = rota_disabled.tt
 	}
+	off_effect = {
+		clr_country_flag = disable_rota_flag
+	}
 	required_reform = reform_land_tax_decision
 }
 
 centralizing_top_government_decision = {
 	empire = celestial_empire
+	emperor = {
+		core_creation = -0.1
+	}
 	on_effect = {
-		country_event = {
-			id = fbievents.122
-			tooltip = can_form_rus_rut.tt
-		}
+		set_country_flag = launched_oprichnina_flag
+	}
+	off_effect = {
+		clr_country_flag = launched_oprichnina_flag
 	}
 	required_reform = military_governors_decision
 }
