@@ -149,3 +149,38 @@ consolidated_region_trigger = {
 	NOT = { unrest = 1 }
 	NOT = { controlled_by = REB }
 }
+
+has_russian_reform_level_1 = {
+	custom_trigger_tooltip = {
+		tooltip = russian_reform_level_1.tt
+		has_country_flag = introduced_pravda_flag
+	}
+}
+
+has_russian_reform_level_2 = {
+	custom_trigger_tooltip = {
+		tooltip = russian_reform_level_4.tt
+		has_country_flag = reformed_varangian_trade_flag
+	}
+}
+
+has_russian_reform_level_3 = {
+	custom_trigger_tooltip = {
+		tooltip = russian_reform_level_4.tt
+		has_country_flag = enserfed_smerds_flag
+	}
+}
+
+has_russian_reform_level_4 = {
+	custom_trigger_tooltip = {
+		tooltip = russian_reform_level_4.tt
+		has_country_flag = disable_rota_flag
+	}
+}
+
+has_russian_reform_level_5 = {
+	custom_trigger_tooltip = {
+		tooltip = russian_reform_level_4.tt
+		has_country_flag = launched_oprichnina_flag
+	}
+}
