@@ -2059,4 +2059,30 @@ country_decisions = {
 			factor = 1
 		}
 	}
+
+	unite_the_rus = {
+		major = yes
+		potential = {
+			has_dlc = "Mandate of Heaven"
+			has_country_flag = launched_oprichnina_flag
+			is_emperor_of_china = yes
+		}
+		allow = {
+			is_at_war = no
+			meritocracy = 100
+			imperial_mandate = 100
+			any_subject_country = {
+				is_subject_of_type = tributary_state
+			}
+		}
+		effect = {
+			country_event = {
+				id = fbievents.122
+				tooltip = can_form_rus_rut.tt
+			}
+		}
+		ai_will_do = {
+			factor = 0
+		}
+	}
 }
