@@ -210,3 +210,5 @@
  wendish_germanization_title: "Germanize"
  wendish_germanization_desc: "Since the 10th century, German emigrants have deliberately been settled in Wendish territory on the border to the Holy Roman Empire. Up to this day, they have merged with our generations, leading to the emergence of new languages and cultures. In view of the constant growth of German culture in our realm, we might want to abandon our Slavic prinvciples altogether and consider ourselves as 'Germans' from now on."
  wendish_germanization.tt: "Adopt the culture of our capital as new primary culture and get our former primary culture as accepted culture"
+ unite_the_rus_title: "Unite the Rus"
+ unite_the_rus_desc: "Demand absolute loyalty of our appanages to proclaim us the Tsar of all Rus."
