@@ -210,3 +210,5 @@
  wendish_germanization_title: "Germanisierung"
  wendish_germanization_desc: "Seit dem 10. Jahrhundert wurden deutsche Auswanderer bewusst auf wendischem Gebiet an der Grenze zum Heiligen Römischen Reich angesiedelt. Bis heute sind sie mit unseren Generationen verschmolzen und haben zur Entstehung neuer Sprachen und Kulturen geführt. Angesichts des ständigen Wachstums der deutschen Kultur in unserem Reich möchten wir vielleicht unsere slawischen Prinzipien ganz aufgeben und uns von nun an als "Deutsche" betrachten."
  wendish_germanization.tt: "Nehmt die Kultur unserer Hauptstadt als neue Primärkultur an und macht unsere frühere Primärkultur zu einer akzeptierten Kultur"
+ unite_the_rus_title: "Vereint die Rus"
+ unite_the_rus_desc: "Fordert die endgültige Loyalität unserer Apanagen, um uns zum Zar der ganzen Rus zu ernennen."
