@@ -715,6 +715,11 @@
  centralizing_top_government_decision_title: "Launch Oprichnina"
  centralizing_top_government_decision_emperor: "Launch Oprichnina"
  centralizing_top_government_decision_desc: "Cutting down on the process of appanage, administrative subdivisions, and the power of the nobility in general will go a long way in allowing us to become Tsar of all Rus."
+ russian_reform_level_1.tt: "§YIntroduce Pravda§! is enacted."
+ russian_reform_level_2.tt: "§YReform Varangian Trade§! is enacted."
+ russian_reform_level_3.tt: "§YEnserf Smerds§! is enacted."
+ russian_reform_level_4.tt: "§YAbolish Rota System§! is enacted."
+ russian_reform_level_5.tt: "§YLaunch Oprichnina§! is enacted."
 #Imperial Reform triggers
  free_city_allowed: "Allow Free City Granting if not already possible"
  free_city_allowed_tooltip: "Allow Free City Granting if not already possible"
