@@ -715,6 +715,11 @@
  centralizing_top_government_decision_title: "Opritschnina einleiten"
  centralizing_top_government_decision_emperor: "Opritschnina einleiten"
  centralizing_top_government_decision_desc: "Die Einschränkung des Prozesses der Apanage, administrative Unterteilungen, sowie der Macht des Adels im Allgemeinen wird es uns in hohem Maße ermöglichen, zum Zaren der gesamten Rus zu werden."
+ russian_reform_level_1.tt: "§YPrawda ausdehnen§! ist erlassen."
+ russian_reform_level_2.tt: "§YWarägerhandel neuordnen§! ist erlassen."
+ russian_reform_level_3.tt: "§YBäuerliche Leibeigenschaft§! ist erlassen."
+ russian_reform_level_4.tt: "§YRota-System abschaffen§! ist erlassen."
+ russian_reform_level_5.tt: "§YOpritschnina einleiten§! ist erlassen."
 #Imperial Reform triggers
  free_city_allowed: "Erlaubt dem Kaiser, freie Reichsstädte zu ernennen, sofern nicht bereits möglich"
  free_city_allowed_tooltip: "Erlaubt dem Kaiser, freie Reichsstädte zu ernennen, sofern nicht bereits möglich"
