@@ -144,7 +144,7 @@
  vn_lem_crusader_alliances_desc: ""
  vn_lem_a_new_crusade_title: "Proceeding the Crusade"
  vn_lem_a_new_crusade_desc: ""
- vn_lem_a_new_crusade.tt: "Be war leader in an offensive war against a Muslim nation."
+ vn_lem_a_new_crusade.tt: " Muslim countries were defeated in a war by [Root.GetName] in the last §Y50§! years."
  vn_lem_obligate_crusaders_title: "Obligate Crusaders"
  vn_lem_obligate_crusaders_desc: ""
  vn_lem_reinforce_the_army_title: "Bolster the Army"
