@@ -1134,7 +1134,7 @@ vn_kie_missions_slot_3 = {
 					NOT = { has_global_flag = empire_of_china_dismantled }
 				}
 				is_emperor_of_china = yes
-				empire_of_china_reform_passed = establish_gaituguiliu_decision
+				has_russian_reform_level_1 = yes
 				imperial_mandate = 50
 			}
 			else = {
@@ -1188,7 +1188,7 @@ vn_kie_missions_slot_3 = {
 					NOT = { has_global_flag = empire_of_china_dismantled }
 				}
 				is_emperor_of_china = yes
-				empire_of_china_reform_passed = seaban_decision
+				has_russian_reform_level_2 = yes
 				imperial_mandate = 50
 			}
 			else = {
@@ -1242,7 +1242,7 @@ vn_kie_missions_slot_3 = {
 					NOT = { has_global_flag = empire_of_china_dismantled }
 				}
 				is_emperor_of_china = yes
-				empire_of_china_reform_passed = reform_land_tax_decision
+				has_russian_reform_level_3 = yes
 				imperial_mandate = 50
 			}
 			else = {
@@ -1289,7 +1289,7 @@ vn_kie_missions_slot_3 = {
 					NOT = { has_global_flag = empire_of_china_dismantled }
 				}
 				is_emperor_of_china = yes
-				empire_of_china_reform_passed = military_governors_decision
+				has_russian_reform_level_4 = yes
 				imperial_mandate = 50
 			}
 			else = {
@@ -1319,7 +1319,8 @@ vn_kie_missions_slot_3 = {
 				}
 				else = {
 					is_emperor_of_china = yes
-					empire_of_china_reform_passed = centralizing_top_government_decision
+					has_russian_reform_level_5 = yes
+					imperial_mandate = 50
 				}
 			}
 			else = {
