@@ -2,12 +2,14 @@
 
 # v 2.0.2 #
 
--Small fixes for the following mission trees: Luxembourg, Baghdad, Ifriqiya, Seljuk, Franche-Comte, Switzerland, Karling, Holland, Novgorod, Foix
+-Small fixes for the following mission trees: Luxembourg, Baghdad, Ifriqiya, Seljuk, Franche-Comte, Switzerland, Karling, Holland, Novgorod, Foix, Kiev, Latin Empire
+-Added a decision to unite the Kievan Rus unlocked when the last reform is passed
 -Fixed several mission modifiers
 -Fixed the Bavarian NI set being duplicated
 -Samogitian Ideas now apply to all Samogitian primary culture tags
 -Added dynamic names for Tusculum, the Roman Commune and the Roman Republic used by Latium
 -Fixed a few mission tooltips
+-European nations no longer get the estate agenda to obtain spice provinces
 -Fixed Gotland naming issue
 -Buffed Fragmentation of Poland rebels
 
